--- a/src/app/product-department/product-department.component.html
+++ b/src/app/product-department/product-department.component.html
@@ -1,3 +1,6 @@
-<p>
-  product-department works!
-</p>
+<div class="product-department">
+  <span *ngFor="let name of product.department; let i=index">
+    <a href="#">{{ name }}</a>
+    <span>{{i < (product.department.length-1) ? '>' : ''}}</span>
+  </span>
+</div>
